--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="fav-momentum-32.png">
 </head>
 
-<body onload="initClock()">
+<body onload="startApp()">
     <div class="blur">
         <main id="main_time">
             <div class="datetime">
